# [[file:spdkit.note::d9a471e3][d9a471e3]]
[package]
name = "spdkit"
version = "0.0.19"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "spdkit: Structure Predication Development Kit"
homepage = "https://github.com/spdkit/spdkit"
repository = "https://github.com/spdkit/spdkit"
license = "MIT OR Apache-2.0"
exclude = ["images/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
rand = "0.8"
lazy_static = "1.3"
vecfx = "0.1"
gut = {version="0.1", package="gchemol-gut"}
gchemol = { version = ">=0.0.41", features=["adhoc"] }
# d9a471e3 ends here
